# ghostpost_backend

./: db.sqlite3  pyproject.toml
api/: serializers.py  urls.py  views.py
ghostpost/: models.py
ghostpost/migrations/: 0001_initial.py
ghostpost_api/: asgi.py  settings.py  urls.py  wsgi.py
